# nebula_project

./: .gitignore  README.md
.github/workflows/: cd.yml  ci.yml
backend/: .profile  .slugignore  Cargo.toml
backend/migrations/: 20201018125547_users.sql  20201018125554_local_users.sql  20201018161144_communities.sql  20201018192138_posts.sql  20201111172011_subscriptions.sql  20210124205802_admins.sql  20210205094013_moderators.sql  20210206124505_messages.sql  20210210160544_remotes.sql  20210318135020_images.sql  20210323155528_avatar_urls.sql
backend/src/: error.rs  lib.rs  main.rs  metrics.rs  test.rs  util.rs
backend/src/fed/: client.rs  communities.rs  mod.rs  other.rs  posts.rs  users.rs
backend/src/internal/: admins.rs  communities.rs  images.rs  messages.rs  mod.rs  posts.rs  remotes.rs  users.rs  ws.rs
backend/src/middleware/: auth.rs  fedsec.rs  mod.rs
backend/src/models/: database.rs  fed.rs  internal.rs  mod.rs
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue  main.ts
frontend/src/components/: AdminPage.vue  HomePage.vue  LandingPage.vue  ProfilePage.vue  searchPage.vue
frontend/src/components/chat/: ChatDialogue.vue  ChatDialogueMessageBody.vue  ChatDialogueSidebar.vue  InboxDropdown.vue  Message.vue
frontend/src/components/communities/: CommunitiesArea.vue  CommunityDescriptionCard.vue  CommunityPage.vue  CommunityPosts.vue  CreateCommunity.vue  communityCard.vue
frontend/src/components/posts/: FullPostPage.vue  (+5 more)
frontend/src/plugins/: vuetify.ts
frontend/src/router/: index.ts
(+6 files in other folders)
