[package]
name = "backend"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
actix-rt = "1.1"
actix-web = "3.3"
actix-service = "1.0"
actix-files = "0.5"
actix-identity = "0.3"
actix-http = "2.2"
actix-multipart = "0.3"
actix-web-actors = "3.0"
actix = "0.10"
awc = {version = "2.0", features = ["rustls"] }
futures = "0.3"
futures-util = "0.3"
async-stream = "0.3"

sqlx = { version = "0.4", default-features = false, features = ["runtime-actix-native-tls", "postgres", "macros", "tls", "migrate", "uuid", "json"] }

log = { version = "0.4", features = ["max_level_trace", "release_max_level_trace"] }
pretty_env_logger = "0.4"

sentry = "0.22"
sentry-actix = "0.22"
sentry-log = "0.22"

serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"
envy = "0.4"
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"
rust-argon2 = "0.8"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
parity-wordlist = "1.3"
jsonwebtoken = "7.2"
base64 = "0.13"
regex = "1.4"
prometheus = { version = "0.12", features = ["process"] }
once_cell = "1.7"
image = "0.23"
sha2 = "0.9"
rsa = "0.4"

[dev-dependencies]
proptest = "1.0"
actix-multipart-rfc7578 = "0.4"
